Fix layout on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 #container {
-  display: flex;
+  display: inline-flex;
   width: 100%;
   height: 100%;
 }
